examples/bad/02-01-wiele-deklaracji.gg
alg Drugi = A | A | B;

1